--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -25,3 +25,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Token de SonarCloud
           GITHUB_TOKEN: ${{ github.token }}  # Token automático de GitHub
+         with:
+      args: >
+        -Dsonar.projectKey=Repositorio-Proyecto-Frumusa
+        -Dsonar.organization=Kevinduran09
+        -Dsonar.branch.name=main
