--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=Repositorio-Proyecto-Frumusa
 sonar.organization=Kevinduran09
 # Nombre del proyecto
 sonar.projectName=Repositorio-Proyecto-Frumusa
-
+sonar.branch.name=main
 
 # Directorios a analizar
 sonar.sources=proyecto,js,css
